Update to 1.0.0 and 1.18 release